--- a/TrabalhoSemestre/web/login.xhtml
+++ b/TrabalhoSemestre/web/login.xhtml
@@ -17,12 +17,9 @@
                           <input type="email" id="inputEmail" class="form-control" placeholder="Enderço de e-mail" required="" autofocus=""/>
                           <label for="inputPassword" class="sr-only">Senha</label>
                           <input type="password" id="inputPassword" class="form-control" placeholder="Senha" required=""/>
-                          <div class="checkbox">
-                            <label>
-                              <input type="checkbox" value="remember-me"/> Lembre-se de mim
-                            </label>
-                          </div>
-                          <button class="btn btn-lg btn-primary btn-block" type="submit">Acessar minha conta</button>
+                          
+                          <button class="btn btn-lg btn-primary btn-block" type="submit" name="acesso">Acessar minha conta</button>
+                          <button class="btn btn-lg btn-primary btn-block" type="submit" name="cadastro">Quero me cadastrar</button>
                         </form>
 
                     </div> <!-- /container -->
