--- a/TrabalhoSemestre/web/index.xhtml
+++ b/TrabalhoSemestre/web/index.xhtml
@@ -4,7 +4,7 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
     <h:head>
-        <title>Facelet Title</title>
+        <title>Programação Web</title>
     </h:head>
     <h:body>
         <ui:decorate template="/template/Decorator.xhtml">
@@ -41,13 +41,13 @@
                                             </div>
                                             <div class="col-xs-9 text-right">
                                                 <div class="huge">26</div>
-                                                <div>New Comments!</div>
+                                                <div>Novos Comentários!</div>
                                             </div>
                                         </div>
                                     </div>
                                     <a href="#">
                                         <div class="panel-footer">
-                                            <span class="pull-left">View Details</span>
+                                            <span class="pull-left">Visualizar Detalhes</span>
                                             <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
                                             <div class="clearfix"></div>
                                         </div>
@@ -63,13 +63,13 @@
                                             </div>
                                             <div class="col-xs-9 text-right">
                                                 <div class="huge">12</div>
-                                                <div>New Tasks!</div>
+                                                <div>Novas Tarefas!</div>
                                             </div>
                                         </div>
                                     </div>
                                     <a href="#">
                                         <div class="panel-footer">
-                                            <span class="pull-left">View Details</span>
+                                            <span class="pull-left">Visualizar Detalhes</span>
                                             <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
                                             <div class="clearfix"></div>
                                         </div>
